# dygit

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.cursor/: hooks.json
.github/workflows/: release.yml
Formula/: dygi.rb
commands/: history.md  stats.md  toggle.md  undo.md
crate/: Cargo.toml  librust_out.rlib
crate/src/: config.rs  error.rs  lib.rs  main.rs  platform.rs  test_support.rs
crate/src/clean/: confidence.rs  corrector.rs  mod.rs  segment.rs  typos.rs
crate/src/commands/: correct.rs  history.rs  hook.rs  mod.rs  stats.rs  toggle.rs  undo.rs
crate/src/daemon/: mod.rs
crate/src/log/: mod.rs  model.rs
hooks/: dygi.sh  hooks.json  run.sh  select-binary.sh
opencode/: README.md  dygi.js
scripts/: build-all.sh
