[package]
name = "dygi"
version = "0.2.0"
edition = "2021"
description = "did-you-get-it: clean messy Claude Code prompts"
license = "MIT"

[[bin]]
name = "dygi"
path = "src/main.rs"

[lib]
name = "dygi"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Spell correction backed by the bundled 82k-word frequency dictionary. Loaded
# once by the resident `dygi daemon`; the hook queries it over a unix socket.
symspell = "0.5"

[profile.release]
opt-level = "z"   # small binary; the work is trivial so size > speed
lto = true
strip = true
